#1ykhhjp - fix horizontal alignment of bnpl icons

--- a/styles/product-page/components/bnpl.scss
+++ b/styles/product-page/components/bnpl.scss
@@ -1,7 +1,18 @@
 .bnpl_icons {
   svg {
-    height: 40px;
+    height: 25px;
+    vertical-align: middle;
   }
+}
+
+.bnpl_icons {
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+}
+
+.bnpl_icons > * {
+  margin: 0 0.25rem;
 }
 
 .bnpl_modal {
